added proper drop down

--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -18,7 +18,8 @@
 					jhiTranslate="global.messages.info.authenticated.link">sign in</a><span
 					jhiTranslate="global.messages.info.authenticated.suffix">,
 					you can try the default accounts:<br />- Administrator
-					(login="admin" and password="admin") <br />- User (login="user" and password="user").
+					(login="admin" and password="admin") <br />- User (login="user"
+					and password="user").
 				</span>
 			</div>
 			<div class="alert alert-warning" *ngSwitchCase="false">
@@ -28,72 +29,115 @@
 					jhiTranslate="global.messages.info.register.link">Register a
 					new account</a>
 			</div>
-			<div class="ssearchPartCode" *ngSwitchCase="true">
+			<div class="searchPartCode" *ngSwitchCase="true">
 				<h1 class="text-center">Search Part Code</h1>
 				<form #f="ngForm" novalidate>
 					<fieldset>
 						<legend>External Shape:</legend>
+						<div class="radio" *ngFor="let e of externalShapeTypes">
+							<label> <input type="radio" name="externalShapeType"
+								[(ngModel)]="partCode.externalShapeType" [value]="e.value">
+								{{e.display}}
+							</label>
+						</div>
 						<div class="form-group">
-							<label>Rotational</label> <select name="rotationalExternalShapes"
-								class="form-control" [(ngModel)]="partCode.rotationalExternalShapes">
-								<option
-									*ngFor="let rotationalExternalShape of rotationalExternalShapes"
-									[value]="rotationalExternalShape.value">{{rotationalExternalShape.display}}</option>
-							</select> <label>Non Rotational</label> <select
-								name="nonRotationalExternalShapes" class="form-control"
-								[(ngModel)]="partCode.nonRotationalExternalShapes">
-								<option
-									*ngFor="let nonRotationalExternalShape of nonRotationalExternalShapes"
-									[value]="nonRotationalExternalShape.value">{{nonRotationalExternalShape.display}}</option>
-							</select>
+							<div [ngSwitch]="partCode.externalShapeType">
+								<div *ngSwitchCase="'EXT_SHAPE_ROTATIONAL'">
+									<label style="font-weight: bold;"> Rotational </label> <select
+										name="externalShapes" class="form-control" required
+										[(ngModel)]="partCode.externalShapes">
+										<option *ngFor="let e of rotationalExternalShapes"
+											[value]="e.value">{{e.display}}</option>
+									</select>
+								</div>
+								<div *ngSwitchCase="'EXT_SHAPE_NON_ROTATIONAL'">
+									<label style="font-weight: bold;"> Non Rotational </label> <select
+										name="externalShapes" class="form-control" required
+										[(ngModel)]="partCode.externalShapes">
+										<option *ngFor="let e of nonRotationalExternalShapes"
+											[value]="e.value">{{e.display}}</option>
+									</select>
+								</div>
+							</div>
 						</div>
 					</fieldset>
 					<fieldset>
 						<legend>Internal Shape:</legend>
+						<div class="radio" *ngFor="let i of internalShapeTypes">
+							<label> <input type="radio" name="internalShapeType"
+								[(ngModel)]="partCode.internalShapeType" [value]="i.value">
+								{{i.display}}
+							</label>
+						</div>
 						<div class="form-group">
-							<label>Stepped/Flanged On One End</label> <select
-								name="steppedOneEndInternalShapes" class="form-control"
-								[(ngModel)]="partCode.steppedOneEndInternalShapes">
-								<option
-									*ngFor="let steppedOneEndInternalShape of steppedOneEndInternalShapes"
-									[value]="steppedOneEndInternalShape.value">{{steppedOneEndInternalShape.display}}</option>
-							</select><label>Steeped/Flanged On Both End</label><select
-								name="steppedBothEndInternalShapes" class="form-control"
-								[(ngModel)]="partCode.steppedBothEndInternalShapes">
-								<option
-									*ngFor="let steppedBothEndInternalShape of steppedBothEndInternalShapes"
-									[value]="steppedBothEndInternalShape.value">{{steppedBothEndInternalShape.display}}</option>
-							</select> <label>Hallow</label> <select name="hollowInternalShapes"
-								class="form-control" [(ngModel)]="partCode.hollowInternalShapes">
-								<option *ngFor="let hollowInternalShape of hollowInternalShapes"
-									[value]="hollowInternalShape.value">{{hollowInternalShape.display}}</option>
-							</select>
+							<div [ngSwitch]="partCode.internalShapeType">
+								<div *ngSwitchCase="'INT_SHAPE_STEPPED_ON_ONE_END'">
+									<label style="font-weight: bold;">Stepped/Flanged On
+										One End </label> <select name="internalShapes" class="form-control"
+										required [(ngModel)]="partCode.internalShapes">
+										<option *ngFor="let s of steppedOneEndInternalShapes"
+											[value]="s.value">{{s.display}}</option>
+									</select>
+								</div>
+								<div *ngSwitchCase="'INT_SHAPE_STEPPED_ON_BOTH_END'">
+									<label style="font-weight: bold;">Steeped/Flanged On
+										Both End</label><select name="internalShapes" class="form-control"
+										required [(ngModel)]="partCode.internalShapes">
+										<option *ngFor="let s of steppedBothEndInternalShapes"
+											[value]="s.value">{{s.display}}</option>
+									</select>
+								</div>
+								<div *ngSwitchCase="'INT_SHAPE_HOLLOW'">
+									<label style="font-weight: bold;">Hallow</label> <select
+										required name="internalShapes" class="form-control"
+										[(ngModel)]="partCode.internalShapes">
+										<option *ngFor="let h of hollowInternalShapes"
+											[value]="h.value">{{h.display}}</option>
+									</select>
+								</div>
+							</div>
 						</div>
 					</fieldset>
-
 					<fieldset>
 						<legend>Dimensional Characteristics:</legend>
+						<div class="radio"
+							*ngFor="let d of dimensionalCharacteristicsTypes">
+							<label> <input type="radio"
+								name="dimensionalCharacteristicsType"
+								[(ngModel)]="partCode.dimensionalCharacteristicsType"
+								[value]="d.value"> {{d.display}}
+							</label>
+						</div>
 						<div class="form-group">
-							<label>Rotational parts</label> <input type="number"
-								class="form-control" name="rotationalDimensionChar"
-								[(ngModel)]="partCode.rotationalDimensionChar" /> <label>Steeped
-								on both end </label> <input type="number" class="form-control"
-								name="steppedBothEndDimensionChar"
-								[(ngModel)]="partCode.steppedBothEndDimensionChar" />
+							<div [ngSwitch]="partCode.dimensionalCharacteristicsType">
+								<div *ngSwitchCase="'DIM_ROTAOTIONAL_PARTS'">
+									<label style="font-weight: bold;">Rotational parts</label> <input
+										type="number" class="form-control"
+										name="dimensionalCharacteristicsTypes"
+										[(ngModel)]="partCode.dimensionalCharacteristicsTypes"
+										required />
+								</div>
+								<div *ngSwitchCase="'DIM_STEPPED_ON_BOTH_END'">
+									<label style="font-weight: bold;">Steeped on both end </label>
+									<input type="number" class="form-control"
+										name="dimensionalCharacteristicsTypes"
+										[(ngModel)]="partCode.dimensionalCharacteristics" />
+								</div>
+							</div>
 						</div>
 					</fieldset>
 					<fieldset>
 						<legend>No.of Holes:</legend>
 						<div class="form-group">
 							<input type="number" class="form-control" name="noOfHoles"
-								[(ngModel)]="partCode.noOfHoles" />
+								[(ngModel)]="partCode.noOfHoles" required />
 						</div>
 					</fieldset>
 					<fieldset>
 						<legend>Mass:</legend>
 						<div class="form-group">
 							<input type="number" class="form-control" name="mass"
-								[(ngModel)]="partCode.mass" />
+								[(ngModel)]="partCode.mass" required />
 						</div>
 					</fieldset>
 
